css/main.css
html, body {
  overflow-x: hidden;
}

/* --- Header Styles ---- */
.navbar {
  box-shadow: inset 0 -1px 0 0 #cfd8dd;
  background-color: #36414c;
  padding: 26px 24px 24px 24px;
  font-family: 'Titillium Web', sans-serif;
  font-weight: 600;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
  color: #ffffff;
}
.nav-item {
  color: #ffffff;
}
.u-bline::after {
  content: '';
  display: block;
  width: 0;
  height: 4px;
  background: #4a90e2;
  transition: width .3s;
}
.u-bline:hover::after {
  width: 100%;
  margin-top: .5px;
}
header a:hover{
  text-decoration: none;
  color: #ffffff;
}

.basket {
  width: 35px;
  height: 35px;
  background-color: #ffffff;
  padding: 5px;
  border-radius: 50%;
}

/* media query navbar */
@media all and (max-width: 768px){
  .u-bline::after {
    content: '';
    display: block;
    width: 0;
    height: 4px;
    background: #4a90e2;
    transition: width .3s;
  }
  .u-bline:hover::after {
    width: 100%;
    margin-top: .5px;
  }
  header a:hover{
    text-decoration: none;
    color: #ffffff;
  }
}


/* MAIN SECTION STYLES FROM HERE UNTIL NEXT COMMENT */

    body {
    background-color: #ffffff;
    margin: 0;
    font-family: 'Titillium Web', sans-serif;
  }

  section {
    margin: 20px 0;
    padding: 20px 0;
  }

  h1 {
    font-family: 'Titillium Web', sans-serif;
    font-size: 56px;
    text-align: center;
  }

  h6.font-weight-bold {
    color: #459de9;
    font-weight: bold;
  }

  /* FIRST SECTION STYLES - HERO IMAGE AND THE NEXT LEVEL TRAINING HEADING*/

.Next-level-training,
.contacts-banner-wrap {
    font-family: 'Titillium Web', sans-serif;
   
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: normal;
    letter-spacing: normal;
    text-align: center;
    color: var(--charcoal-grey);
    padding: 60px;
    background-color: rgba(91, 157, 227, 0.08);
    margin-top: 0;
    
  }
  .Next-level-training {
    font-size: 56px; 
  }

  .text-style-1 {
      margin: 0;
  }

  .Take-your-tech-caree {
    /* width: 882px; */
    height: 78px;
    font-family: Titillium;
    font-size: 18px;
    font-weight: 600;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.44;
    letter-spacing: normal;
    text-align: center;
    color: var(--charcoal-grey);
  }
  
  .button-more {
    width: 300px;
    height: 60px;
    border-radius: 30px;
    box-shadow: 0 10px 20px 0 rgba(25, 71, 128, 0.2);
    background-color:  #4a90e2;
    color: #ffffff;
    text-decoration: none;
  }

  .button-more:hover {
    background-color: #ffffff;
    border: solid 2px #4a90e2;
    color: #4a90e2;
  }

  .FIND-OUT-MORE {
    /* width: 204px;
    height: 19px; */
    font-family: Titillium;
    font-size: 18px;
    font-weight: 600;
    font-stretch: normal;
    font-style: normal;
    line-height: normal;
    letter-spacing: normal;
    text-align: center;
    margin: 0;
  }


    /* ---- Second Section--- */

  
#side-bar-summary {
  padding: 60px 40px;
  border-radius: 5px;
  box-shadow: -10px 5px 12px  rgba(25, 71, 128, 0.2);
  background-color: #ffffff;
}
.img-fill {
  background-color: #4a90e2;
  width: 75px;
  height:75px ;
  border-radius: 5px;
  padding: 10px;
  margin: auto;
}

.why-maven-read-more {
  width: 146px;
  height: 40px;
  border-radius: 22.5px;
  border: solid 2px #4a90e2;
  text-decoration: none;
  color:  #4a90e2;
}

.why-maven-read-more:hover {
  background-color:  #4a90e2;
  color: white;
}

/* media Query */
@media all and (min-width: 768px){
  #why-maven-academy {
    padding: 40px 80px;
  }
}
@media all and (max-width: 767px){
  #side-bar-summary {
    text-align: center;
  }
}
/* THIRD SECTION STYLES - COURSES CAROUSEL STYLING */

.our-courses {
  height: px;
  background-color: rgba(91, 157, 227, 0.08);
}

.card {
  width: 20rem;
  border: none;
}

 #add-to-inquiry {
  width: 100%;
  height: 40px;
  border-radius: 22.5px;
  border: solid 2px #60a0e3;
  background-color: #ffffff;
  color: #4a90e2;
  text-decoration: none;
}
#add-to-inquiry:hover{
  background-color: #4a90e2 ;
  color: #ffffff;
}

/* COURSE OUTLINE PAGES' STYLING */

li.sub-tabs-item {
  margin-right: 35px;
}

.block-text {
  background-color: rgba(91, 157, 227, 0.08);
  margin-top: 30px;
}

.courses-mobile {
  display: none;
}


/* FOURTH SECTION STYLES */

.career-services {
  height: 56px;
  font-family: Titillium;
  font-size: 18px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.33;
  letter-spacing: normal;
  color: #707277;
}

.grayscale {
  opacity: .5;
  filter: grayscale(1);
}

.grayscale:hover {
  filter: none;
  opacity: 1;
}

#find-out-more-career-services {
  width: 146px;
  height: 40px;
  text-align: center;
  border-radius: 22.5px;
  border: solid 2px #60a0e3;
  background-color: #ffffff;
  color: #4a90e2;
  text-decoration: none;
}

#find-out-more-career-services:hover {
  background-color: #4a90e2 ;
  color: #ffffff;
}
/* ----Contact Us Page ---- */


.form-control {
  border-radius: 22.5px;
}

/* -------CART PAGE------- */

.courses-container {
  max-width: 650px;
  justify-content: space-around;
  margin: 0 auto;
  margin-top: 50px;
  /* display: flex;
  flex-wrap: wrap; */
  padding-bottom: 100px;
}

.courses-container ion-icon {
  font-size: 25px;
  color: #0437dd;
  margin-left: 10px;
  margin-right: 10px;
  cursor: pointer;
}

.courses-header {
  width: 100%;
  max-width: 650px;
  display: flex;
  justify-content: flex-start;
  border-bottom: 3px solid #d8d8d8;
  margin: 0 auto;
}

.course-title {
  width: 45%;

}

.price {
  width: 15%;
  /* border-bottom: 1px solid #d8d8d8; */
  display: flex;
  align-items: center;
}

.quantity {
  width: 30%;
  display: flex;
  align-items: center;
  /* border-bottom: 1px solid #d8d8d8; */
}

.total {
  width: 10%;
  display: flex;
  align-items: center;
  /* border-bottom: 1px solid #d8d8d8; */
}

.course-plug-in {
  width: 45%;
  /* display:flex;
  flex-wrap: wrap;
  border-bottom: 1px solid #d8d8d8; */
}

.basketTotalContainer {
  display: flex;
  justify-content: end;
  width: 100%;
  padding: 10px 0;
}

.basketTotalTitle {
  width: 30%;
}

.basketTotal{
  width: 10%;
}

/* ---Footer Styles all begin here--- */

footer .Upper-footer {
  padding: 80px 0;
  vertical-align: middle;
  color: #ffffff;
  background-color: #36414c;
};

.Upper-footer li{
  text-align: center;
}


.footer-bottom.container.row{
  display: flex;
  flex-wrap: wrap;
} 
  .social-media ul {
    display: flex;
    list-style-type: none;
    text-align: right;
    margin: 0;
    justify-content: space-evenly;
  }
    .social-media ul li a{
      width: 34px;
      height: 34px;
      
      background-color: #5b9de3;
      border-radius: 5px;
      padding: 6px;
    }

